I've solved the footer issue for facilities And fixed the image when the screen is reduced, Added the footer for Room.html, Linked all the pages again ( you'll need to delete the indext.html, and facilities.css to avoid confusion,) Also made adjustments to  Rooms images (they were too aligned to the left, I removed the img src in home.html under class "home" since you already added it in the css, it was causing conflict when the screen reduces it shows multiple images instead of 1

--- a/css/home.css
+++ b/css/home.css
@@ -12,6 +12,13 @@ nav{
     width: 100%;
     background-color: white !important;
 }
+.card-img-top {
+    height: 350px;
+    width:100%;
+}
+.card-body{
+  width: 100%;
+}
 
 .home img{
   width: 100%;
@@ -19,7 +26,7 @@ nav{
 
 .navbar{
     padding: 1.2rem;
-    
+
 }
 .nav-head{
     color: #FC3C3C;
@@ -41,7 +48,7 @@ nav{
 
 .navbar-nav li {
   padding-left: 30px;
-  
+
 }
 .nav-link {
   font-size: 1;
@@ -87,7 +94,7 @@ nav{
   }
   .rooms h3{
     text-align: center;
-    font-size: 40px;  
+    font-size: 40px;
   }
   .padding{
     padding-top: 40px;
@@ -154,6 +161,14 @@ nav{
   .responsive-motto {
     font-size: 64px;
   }
+  .room-card {
+  transition: all .2s ease-in-out;
+  }
+
+  .room-card:hover {
+  transform: scale(1.001);
+  -webkit-transform: scale(1.1);
+  }
   #footer{
     padding: 0px !important;
     margin: 0px !important;
@@ -164,20 +179,23 @@ nav{
     padding-top:10px !important;
     margin-top: 40px !important;
   }
-  
- 
+
+
 
   /* Media Queries */
-  
+
 @media only screen and (max-width: 732px){
   .nav-link{
     font-size: 1 !important;
-    
+
   }
   .responsive-motto{
     font-size: 32px !important;
-
   }
+.home{
+  width: 100%;
+  height: 350px;
+}
   .caption{
     top: 25% !important;
   }
@@ -214,7 +232,7 @@ nav{
 }
 
 @media only screen and (max-width: 706px) {
-    
+
     .responsive-motto {
       font-size: 30px !important;
     }
