--- a/css/room.css
+++ b/css/room.css
@@ -1,4 +1,10 @@
 
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 .room_header{
   background: url(https://images.unsplash.com/photo-1444201983204-c43cbd584d93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);
   width: 100%;
@@ -22,7 +28,7 @@ width: 100%;
 
 .navbar{
   padding: 1.2rem;
-  
+
 }
 .nav-head{
   color: #FC3C3C;
@@ -74,8 +80,8 @@ text-decoration: underline;
 
 .room-content .room-shadow{
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-   margin-right: 20px;
-   margin-left: 20px;
+   margin-right: 10px;
+   margin-left: 80px;
    padding: 0px;
    margin-top: 20px;
 }
@@ -83,6 +89,27 @@ text-decoration: underline;
 .image-style{
  width: 100%;
  height:200px;
+}
+#footer {
+  padding: 0px !important;
+  margin: 0px !important;
+  background: #2b2b2b;
+  color:white;
+  width: 100%;
+  padding: 5px;
+  padding-top:10px !important;
+  margin-top: 40px !important;
+  font-family: sans-serif;
+  height: 50%;
+}
+.container-fluid mt-4{
+  padding: 0px !important;
+  margin: 0px !important;
+  width: 100%;
+}
+.row container{
+    width: 100%;
+
 }
 
 
